# vsc_python

./: .env.example  .gitignore  GEMINI.md  README.md  config.py  conftest.py  pyproject.toml
helpers/: db.py  web_service.py
page_objects/: application.py  demo_pages.py  test_cases.py
tests/: test_demo.py  test_location.py  test_mobile.py  test_testcases.py
